--- a/style/index-refactor.css
+++ b/style/index-refactor.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     border: 1px solid black;
-}
+} */
 
 .container {
     max-width: 900px;
@@ -9,7 +9,8 @@
 }
 
 header {
-    padding: 0 1%;
+    padding: 2% 1% 4% 1%;
+    background-color: #BBA8A2;
 }
 
 header nav {
@@ -21,12 +22,15 @@ header nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    
     border: 1px solid black;
     text-decoration: none;
+    color: black;
+    height: 2rem;
 }
 
 .nav-button {
-
+    width: 12%;
 }
 
 /* Main content */
@@ -34,13 +38,29 @@ header nav {
 .intro {
     display: flex;
     flex-flow: row wrap;
-    align-items: center;
     justify-content: space-around;
+}
+
+.intro img {
+    margin: 2% 0;
 }
 
 .intro img, .text-container {
     max-width: 100%;
     width: 48%;
+}
+
+.text-container {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-end;
+    
+    width: 40%;
+    padding: 0 4%;
+}
+
+#projects-button {
+    width: 42%;
 }
 
 .gallery {
@@ -59,7 +79,7 @@ header nav {
 }
 
 .caption {
-
+    text-align: center;
 }
 
 .footer {
@@ -67,8 +87,13 @@ header nav {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    align-content: center;
+    
     height: 25vh;
+    padding-bottom: 2%;
+    background-color: #BBA8A2;
 }
 
-
+#contact-button {
+    width: 20%;
+    height: 2.5rem;
+}
