--- a/style/index.css
+++ b/style/index.css
@@ -1,135 +1,166 @@
-* {
-    /* border: 1px solid transparent; */
-    /* ^ Unfortunate jank */
-}
-
-body {
-    text-align: center;
-    color: #321f28;
-}
+/* * {
+    border: 1px solid black;
+} */
 
 .container {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    max-width: 900px;
+    margin: 0 auto;
+    
 }
 
 header, footer {
-    background-color: #a05344;
-}
-
-.header {
-    text-align: left;
-    margin: 0 2.5vw;
-}
-
-h1 {
-    font-size: 4vw;
-    margin: 3vw 0;
-}
-
-h2 {
-    font-size: 2vw;
-}
-
-.nav-bar {
     display: flex;
-    margin: 2vw 0;
+    flex-flow: column nowrap;
+    background-color: #BBA8A2;
+    padding: 2% 4% 4% 4%;
+}
+
+header {
+    justify-content: space-around;
+}
+
+header nav {
+    display: flex;
+    flex-flow: row nowrap;
 }
 
 .link-button {
-    display: block;
-    width: 8.3vw;
-    height: 3vw;
-    background-color: #734046;
-    color: #e79e4f;
-    border: 1px solid #321f28;
-    text-decoration: none;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1vw;
+    
+    border: 1px solid black;
+    text-decoration: none;
+    background-color: #DDBCA2;
+    color: black;
+    height: 2rem;
 }
 
 .nav-button {
-
+    width: 11%;
 }
 
 #current-page-button {
-    background-color: #321f28;
-}
-
-.content {
-    background-color: #e79e4f;
+    background-color: #8E7C70;
 }
 
 .intro {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    margin: 3vw 0;
 }
 
-.text-container, .main-image {
-    width: 45vw;
-    height: auto;
-}
-
-.main-image img {
-    display: block;
-    width: 100%;
-    height: auto;
+.intro img {
+    max-width: 100%;
+    width: 48%;
+    margin: 2% 0;
 }
 
 .text-container {
-    
-}
-
-.main-text {
     display: flex;
-    flex-direction: column;
+    flex-flow: column nowrap;
     justify-content: flex-end;
-    height: 100%;
-    margin: 0 7vw;
-    text-align: left;
-}
-
-.main-text p {
-    font-size: 1.5vw;
+    align-items: flex-start;
+    
+    width: 40%;
+    padding: 0 4%;
 }
 
 #projects-button {
-    width: 12.5vw;
+    width: 42%;
 }
 
 .gallery {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    margin: 1vw 0;
 }
 
 .image-container {
-    margin: 2vw 0;
-}
-
-.caption {
-    font-size: 1.2vw;
+    width: 23%;
 }
 
 .image {
-    width: 21vw;
-    height: 21vw;
+    max-width: 100%;
 }
 
-.footer {
+.caption {
+    text-align: center;
+}
+
+footer {
     display: flex;
+    flex-flow: column nowrap;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
     align-content: center;
-    height: 20vw;
 }
 
 #contact-button {
-    width: 17vw;
-    height: 4.5vw;
+    width: 20%;
+    height: 3rem;
+}
+
+/* @media for responsive design */
+
+@media (max-width: 800px) {
+    html {
+        text-align: center;
+    }
+
+    footer {
+        padding-bottom: 6%;
+    }
+
+    header nav {
+        /* flex-flow: column nowrap; */
+        align-items: center;
+    }
+
+    .link-button {
+        width: 25%;
+        height: 3rem;
+    }
+    
+    #projects-button, #contact-button {
+        width: 33%;
+    }
+
+    .intro {
+        margin: 4% 0;
+    }
+
+    .intro img, .text-container {
+        width: 92%;
+        margin: 0;
+    }
+
+    .text-container {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .gallery {
+        justify-content: space-evenly;
+    }
+
+    .image-container {
+        width: 42%;
+        margin-bottom: 4%;
+    }
+
+}
+
+@media (max-width: 500px) {
+    header {
+        padding-bottom: 6%;
+    }
+
+    header nav {
+        flex-flow: column nowrap;
+    }
+
+    .link-button {
+        width: 33%;
+    }
 }
