--- a/style/index.css
+++ b/style/index.css
@@ -1,7 +1,3 @@
-/* * {
-    border: 1px solid black;
-} */
-
 .container {
     max-width: 900px;
     margin: 0 auto;
@@ -33,7 +29,7 @@ header nav {
     text-decoration: none;
     background-color: #DDBCA2;
     color: black;
-    height: 2rem;
+    height: 2.25rem;
 }
 
 .nav-button {
@@ -80,7 +76,7 @@ header nav {
     width: 23%;
 }
 
-.image {
+.image-container img {
     max-width: 100%;
 }
 
@@ -101,7 +97,7 @@ footer {
     height: 3rem;
 }
 
-/* @media for responsive design */
+/* Responsive design: tablet view */
 
 @media (max-width: 800px) {
     html {
@@ -113,13 +109,15 @@ footer {
     }
 
     header nav {
-        /* flex-flow: column nowrap; */
         align-items: center;
     }
 
     .link-button {
-        width: 25%;
         height: 3rem;
+    }
+
+    .nav-button {
+        width: 25%;
     }
     
     #projects-button, #contact-button {
@@ -150,6 +148,8 @@ footer {
     }
 
 }
+
+/* Responsive design: mobile view */
 
 @media (max-width: 500px) {
     header {
